--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,192 @@
 .header {
-  height: 200px;
-}
-.header__titre {
+  height: 400px;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.35) 100%), url("image_mer.jpg");
+  background-position: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
-.header__form {
-  display: flex;
-  justify-content: center;
+.header__titre {
+  padding: 10px;
+  font-size: 2.5em;
+}
+.header__email {
+  background-color: #D9D9D9;
+  color: black;
+  padding: 5px;
+  padding-left: 10px;
+}
+.header__email, .header__submit {
+  border-radius: 8px;
+  border-color: #dcdcdc;
+  border-width: 1px;
+  padding: 9px;
+}
+.header__submit {
+  background-color: #0D6EFD;
+  color: white;
 }
 
-.nav {
+.nav__container {
   display: flex;
-  justify-content: space-around;
-  padding: 1rem auto;
-}
-.nav__content a {
-  text-decoration: none;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 .nav__logo {
-  width: 150px;
-  height: 30px;
+  font-size: 1.2em;
+  margin-left: 30px;
 }
 .nav__login {
+  text-decoration: none;
+  padding: 6px;
   background-color: #0D6EFD;
-  width: 150px;
+  color: white;
+  border-radius: 5px;
+}
+
+.articles__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  padding: 50px;
+}
+.articles__container .article {
+  margin: 0 auto;
+  min-width: 300px;
+  width: 30%;
+}
+.articles__container .fa-solid, .articles__container .fa-puzzle-piece {
+  color: #0D6EFD;
+}
+.articles__container__titre {
+  height: 35px;
+  font-size: 26px;
+}
+.articles__container__text {
+  height: 120px;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .articles-container {
+    margin: 0 auto;
+    max-width: 1440px;
+  }
+}
+.contact {
+  text-align: center;
+  margin-bottom: 120px;
+}
+.contact hr {
+  width: 60%;
+  color: rgba(50, 50, 50, 0.28);
+  box-shadow: 2px 2px 2px 1px;
+}
+.contact__form {
+  width: 70%;
+  margin: auto;
+  border-radius: 3px;
+  box-shadow: 10px 10px 5px rgb(204, 204, 204);
+  background-color: white;
+}
+.contact__coordonnees {
+  margin: auto;
+  width: 85%;
+  display: flex;
+  gap: 15%;
+}
+.contact__input {
   height: 30px;
+}
+.contact__input, .contact__message, .contact__submit {
+  margin: 1.2em auto;
+  width: 50%;
+  font-size: 14px;
+  border-radius: 11px;
+  border-width: 2px;
+  background-color: #F5F5F5;
+  color: black;
+}
+.contact__input, .contact__message {
+  padding-left: 10px;
+}
+.contact__message {
+  resize: vertical;
+  width: 85%;
+  padding-top: 10px;
+}
+.contact__submit {
+  width: 100px;
+  height: 30px;
+  background-color: #0D6EFD;
+  color: white;
+}
+
+@media screen and (min-width: 750px) {
+  .contact__form {
+    width: 50%;
+  }
+}
+.footer {
+  background-color: #D9D9D9;
+}
+.footer__container {
+  list-style: none;
+  margin-left: -20px;
+  color: #0D6EFD;
+  padding: 15px;
+}
+.footer__liens {
+  list-style: none;
+}
+.footer__liens a {
+  color: #0D6EFD;
+}
+.footer__about, .footer__rights {
+  margin-left: 11px;
+}
+.footer__contact::before, .footer__use::before, .footer__policy::before {
+  content: "-";
+  margin-right: 7px;
+  visibility: hidden;
+}
+.footer__rights a {
+  color: rgba(0, 0, 0, 0.5);
+}
+.footer__liens a, .footer__rights a {
+  text-decoration: none;
+}
+.footer__site {
+  margin-left: 40px;
+}
+
+@media screen and (min-width: 750px) {
+  .footer {
+    height: 110px;
+  }
+  .footer__liens {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+  }
+  .footer__contact::before, .footer__use::before, .footer__policy::before {
+    visibility: visible;
+  }
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Times New Roman", Times, serif;
+  font-weight: 400;
+  background-color: #F8F9FA;
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
