--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,6 @@
 @import 'layout/header';
 @import 'layout/nav';
+@import 'components/article.scss';
+@import 'components/section.scss';
+@import 'layout/footer.scss';
+@import '_base.scss';
