--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,9 @@
 body {
-    width: 900px;
     margin: 0;
     padding: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Roboto, 'Times New Roman', Times, serif;
+    font-weight: 400;
+
+    background-color: #F8F9FA;
+    color: black;
 }
