--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -24,8 +24,8 @@
     &__email, &__submit {
         border-radius: 8px;
         border-color: #dcdcdc;
-        border-width: 1px;
-        padding: 9px;
+        border: none;
+        padding: 5px;
     }
 
     &__submit {
