--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Times New Roman", Times, serif;
+  font-weight: 400;
+  background-color: #F8F9FA;
+  color: black;
+}
+
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+.nav__logo {
+  font-size: 1.2em;
+  margin-left: 30px;
+}
+.nav__login {
+  text-decoration: none;
+  padding: 6px;
+  background-color: #0D6EFD;
+  color: white;
+  border-radius: 5px;
+}
+
 .header {
   height: 400px;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.35) 100%), url("image_mer.jpg");
@@ -22,117 +49,14 @@
 .header__email, .header__submit {
   border-radius: 8px;
   border-color: #dcdcdc;
-  border-width: 1px;
-  padding: 9px;
+  border: none;
+  padding: 5px;
 }
 .header__submit {
   background-color: #0D6EFD;
   color: white;
 }
 
-.nav__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-.nav__logo {
-  font-size: 1.2em;
-  margin-left: 30px;
-}
-.nav__login {
-  text-decoration: none;
-  padding: 6px;
-  background-color: #0D6EFD;
-  color: white;
-  border-radius: 5px;
-}
-
-.articles__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  text-align: center;
-  padding: 50px;
-}
-.articles__container .article {
-  margin: 0 auto;
-  min-width: 300px;
-  width: 30%;
-}
-.articles__container .fa-solid, .articles__container .fa-puzzle-piece {
-  color: #0D6EFD;
-}
-.articles__container__titre {
-  height: 35px;
-  font-size: 26px;
-}
-.articles__container__text {
-  height: 120px;
-  font-size: 16px;
-}
-
-@media screen and (min-width: 1440px) {
-  .articles-container {
-    margin: 0 auto;
-    max-width: 1440px;
-  }
-}
-.contact {
-  text-align: center;
-  margin-bottom: 120px;
-}
-.contact hr {
-  width: 60%;
-  color: rgba(50, 50, 50, 0.28);
-  box-shadow: 2px 2px 2px 1px;
-}
-.contact__form {
-  width: 70%;
-  margin: auto;
-  border-radius: 3px;
-  box-shadow: 10px 10px 5px rgb(204, 204, 204);
-  background-color: white;
-}
-.contact__coordonnees {
-  margin: auto;
-  width: 85%;
-  display: flex;
-  gap: 15%;
-}
-.contact__input {
-  height: 30px;
-}
-.contact__input, .contact__message, .contact__submit {
-  margin: 1.2em auto;
-  width: 50%;
-  font-size: 14px;
-  border-radius: 11px;
-  border-width: 2px;
-  background-color: #F5F5F5;
-  color: black;
-}
-.contact__input, .contact__message {
-  padding-left: 10px;
-}
-.contact__message {
-  resize: vertical;
-  width: 85%;
-  padding-top: 10px;
-}
-.contact__submit {
-  width: 100px;
-  height: 30px;
-  background-color: #0D6EFD;
-  color: white;
-}
-
-@media screen and (min-width: 750px) {
-  .contact__form {
-    width: 50%;
-  }
-}
 .footer {
   background-color: #D9D9D9;
 }
@@ -166,7 +90,7 @@
   margin-left: 40px;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 744px) {
   .footer {
     height: 110px;
   }
@@ -180,13 +104,133 @@
     visibility: visible;
   }
 }
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, "Times New Roman", Times, serif;
-  font-weight: 400;
-  background-color: #F8F9FA;
+.articles__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  padding: 50px;
+}
+.articles__container .article {
+  margin: 0 auto;
+  min-width: 300px;
+  width: 30%;
+}
+.articles__container .fa-solid, .articles__container .fa-puzzle-piece {
+  color: #0D6EFD;
+}
+.articles__container__titre {
+  height: 35px;
+  font-size: 26px;
+}
+.articles__container__text {
+  height: 120px;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .articles-container {
+    margin: 0 auto;
+    max-width: 1440px;
+  }
+}
+section {
+  box-sizing: border-box;
+  margin-bottom: 110px;
+  margin-top: 80px;
+}
+section h2 {
+  text-align: center;
+  padding-top: 30px;
+}
+section hr {
+  width: 60%;
+  color: rgba(50, 50, 50, 0.28);
+  box-shadow: 2px 2px 2px 1px;
+}
+section .form {
+  width: 70%;
+  padding: 16px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 7px;
+  box-shadow: 10px 10px 5px rgb(204, 204, 204);
+  background-color: white;
+}
+section .form > div > div {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+section .form__section {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+section .form__input {
+  padding: 8px 16px;
+  border-radius: 5px;
+  border: none;
+  flex: 1;
+  background-color: #F5F5F5;
   color: black;
+}
+section .form__input--textarea__container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 5px;
+}
+section .form__input--textarea {
+  min-height: 100px;
+  max-height: 300px;
+  resize: vertical;
+  padding: 8px 16px;
+  background-color: #F5F5F5;
+}
+section ::placeholder {
+  font-size: 13px;
+  opacity: 0.3;
+}
+section .form__submit {
+  width: fit-content;
+  padding: 6px 6px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #0D6EFD;
+  color: white;
+}
+section .error-message {
+  color: rgb(195, 13, 13);
+  font-family: sans-serif;
+  font-size: 12px;
+  font-style: italic;
+}
+
+@media screen and (min-width: 744px) {
+  .form {
+    max-width: 660px;
+    margin: 0 auto !important;
+  }
+  .form__section {
+    flex-direction: row !important;
+    justify-content: space-between;
+    gap: 0 !important;
+  }
+  .form__input {
+    max-height: 37px !important;
+    flex: none;
+  }
+  ::placeholder {
+    font-size: 15px !important;
+  }
+  .form__input--textarea {
+    width: initial !important;
+    font-size: 15px !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
