--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ section .form {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  gap: 16px;
   border-radius: 7px;
   box-shadow: 10px 10px 5px rgb(204, 204, 204);
   background-color: white;
@@ -204,6 +205,7 @@ section .form__submit {
   color: white;
 }
 section .error-message {
+  display: none;
   color: rgb(195, 13, 13);
   font-family: sans-serif;
   font-size: 12px;
@@ -231,6 +233,41 @@ section .error-message {
     width: initial !important;
     font-size: 15px !important;
   }
+}
+.modal {
+  display: none;
+  position: fixed;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal .modal__content {
+  width: 40%;
+  margin: 15% auto;
+  padding: 20px;
+  background-color: #234e79;
+  color: rgb(255, 255, 255);
+  border: thick double #ffffff;
+}
+.modal__message {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 60px;
+}
+.modal__cocheVerte {
+  font-size: 45px;
+  text-align: center;
+}
+.modal__close-button {
+  color: #a9a9a9;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.modal__close-button:hover {
+  color: black;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
