--- a/scss/components/section.scss
+++ b/scss/components/section.scss
@@ -20,7 +20,7 @@ section {
         margin: 0 auto;
         display: flex;
         flex-direction: column;
-        // gap: 16px;
+        gap: 16px;
         border-radius: 7px;
         box-shadow: 10px 10px 5px rgb(204, 204, 204);
         background-color: white;
@@ -79,7 +79,7 @@ section {
             }
             
             .error-message {
-                // display: none;
+                display: none;
                 color: rgb(195, 13, 13);
                 font-family: sans-serif;
                 font-size: 12px;
