Modification de la police de caractères du formulaire
La police de caractères du formulaire a été modifié en "Roboto, serif", pour correspondre au reste du site.

--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,10 @@ section .form__input--textarea {
   resize: vertical;
   padding: 8px 16px;
   background-color: #F5F5F5;
+  font-family: Robot, serif;
 }
 section ::placeholder {
+  font-family: Robot, serif;
   font-size: 13px;
   opacity: 0.3;
 }
@@ -201,6 +203,7 @@ section .form__submit {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-family: Robot, serif;
   background-color: #0D6EFD;
   color: white;
 }
@@ -210,6 +213,7 @@ section .error-message {
   font-family: sans-serif;
   font-size: 12px;
   font-style: italic;
+  font-family: Robot, serif;
 }
 
 @media screen and (min-width: 744px) {
